# Kelompok14_FinalNLP_A

./: .gitattributes  .gitignore  1_preprocessing.py  2_split_and_weighting.py  3_eda.py  README.md  main.ipynb  pyproject.toml  requirements.txt  step4_finetune_indobert_colab.ipynb
data/: class_weights.json  preprocessed.csv  test.csv  train.csv  val.csv
include/: data_utils.py  dataset.py  eda.py  helper.py  preprocessor.py
model/indobert/: config.json  model.onnx  model.safetensors
model/xlm_roberta/: config.json  model.onnx  model.safetensors  tokenizer_config.json
