[project]
name = "kelompok14-finalnlp-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.21",
    "decorator==5.3.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fonttools==4.63.0",
    "ipykernel==7.3.0",
    "ipython==8.39.0",
    "jedi==0.20.0",
    "joblib==1.5.3",
    "jupyter-client==8.9.1",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.2",
    "nest-asyncio2==1.7.2",
    "numpy==2.2.6",
    "onnx>=1.22.0",
    "packaging==26.2",
    "pandas==2.3.3",
    "parso==0.8.7",
    "pillow==12.2.0",
    "platformdirs==4.10.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "pyzmq==27.1.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tornado==6.5.7",
    "traitlets==5.15.1",
    "transformers>=5.12.1",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "wcwidth==0.8.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]] 
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
